<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_connectionGroupTitleString">

        <EditTextPreference
            android:key="url"
            android:title="@string/pref_serverUrlTitleString"
            android:defaultValue="http://192.168.1.100:8000/sensors/load_realtime/"/>

        <EditTextPreference
            android:key="url_parameters"
            android:title="@string/pref_serverUrlParamsTitleString"
            android:defaultValue=""/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_appearanceGroupTitleString">

        <EditTextPreference
            android:key="font_size"
            android:title="@string/pref_fontSizeTitleString"
            android:defaultValue="30"/>

    </PreferenceCategory>

</PreferenceScreen>